src/sections/schedule/components/details.scss
@import '../../../variables';
@import '../../../placeholders';

.schedule-details-modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  z-index: 99;
  overflow-y: auto;

  &.open {
    .schedule-details-container {
      right: 0;
    }
  }
  
  &:not(.open) .schedule-details-container {
    right: -100%;
  }

  @media (min-width: 431px) {
    visibility: hidden;
    opacity: 0;
    transition: opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;

    .schedule-details-container {
      right: -100%;
      transition: right 0.5s ease-in-out;
    }

    &.open {
      visibility: visible;
      opacity: 1;
    }
  }

  @media (max-width: 430px) {
    right: -100%;
    opacity: 1; /* Ensure the dark background always appears on mobile */
    transition: right 0.5s ease-in-out;
    background-color: transparent;
    left: auto;

    &.open {
      right: 0;
    }
  }
}

.schedule-details-container {
  @extend %container;
  background-color: white;
  height: 100%;
  max-width: 500px;
  margin-left: 300px;
  position: relative;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  overflow: hidden; /* Ensures that the overflow is hidden initially */
  transition: right 0.5s ease-in-out;

  .schedule-details-content {
    position: relative;
    flex-grow: 1; /* Ensures the content area takes up remaining space */
    overflow-y: auto; /* Ensures overflow is handled inside the content area */
  }

  .schedule-details-close-btn {
    position: absolute;
    top: 0;
    right: 0;
    border: none;
    background-color: transparent;
    width: 16px;
    height: 16px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  @media (max-width: 430px) {
    max-width: none;
    margin-left: 0;
    position: absolute; /* Ensure it slides along with the modal */
    right: -100%;

    .schedule-details-close-btn {
      right: 16px;
    }
  }

}

.schedule-details-header {
  padding-bottom: 32px;
  margin-bottom: 32px;
  border-bottom: 1px solid $border-gray;
}

.schedule-details-title {
  margin-right: 32px;
  margin-bottom: 16px;
  font-size: 22px;
  font-weight: 700;
  line-height: 30.8px;
  text-align: left;
}

.schedule-details-description {
  font-size: 14px;
  font-weight: 400;
  line-height: 22.4px;
  text-align: left;
}

.schedule-details-body {
  padding-bottom: $containerPadding;
  border-bottom: 1px solid $border-gray;
  margin-bottom: $containerPadding;
  &:last-child {
    padding-bottom: 0;
    border-bottom: 0;
    margin-bottom: 0;
  }
}

.schedule-details-image {
  width: 191px;
  margin: 16px 0;
  border-radius: 8px;
}

.schedule-details-name {
  font-size: 22px;
  font-weight: 700;
  line-height: 30.8px;
  text-align: left;
}

.schedule-details-company {
  margin-bottom: 16px;
  font-size: 14px;
  font-weight: 400;
  line-height: 15.75px;
  letter-spacing: 0.005em;
  text-align: left;
}

